<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragments.FragmentPreview">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewTurnIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_end" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewFlag"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_finish_flag" />

                <TextView
                    android:id="@+id/textViewEta"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/eta_default" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewDist2Target"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/dist_2_target_default" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTurnDist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/turn_dist_default"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/textViewTurnUnit"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="16dp"
                android:text="@string/turn_dist_unit_default" />

            <TextView
                android:id="@+id/textViewTurnInfo"
                android:layout_width="72dp"
                android:layout_height="18dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/turn_info_default" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewTurnRoad"
            android:layout_width="160dp"
            android:layout_height="38dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/turn_road_default" />

    </LinearLayout>

</LinearLayout>